# starsector-nano

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md
assets/data/: register.json
assets/data/bullet/: bullet_data.csv  proton_laser.json  punishment_bullet.json  torrent_bullet.json
assets/data/ship/: PRI_Torrent.json  PRI_TransmissionGate.json  RUI_RingProbe.json  ship_data.csv
assets/data/weapon/: proton.JSON  punishment.JSON  torrent.JSON  weapon_data.csv
docs/: architecture.md  development.md  easyx_effects.md  physics_system.md  sat_collision.md
include/: Animation.h  Background.h  BulletAPI.h  BulletPool.h  Camera.h  Control.h  CustomFSM.h  Distortion.h  Engine.h  Entity.h  ExplosionAPI.h  ExplosionPool.h  GlobalCombatData.h  ImageProcessing.h  Manager.h  MathTool.h  Polygon.h  SequencedExplosion.h  ShipAPI.h  ShipPool.h  TacticalMap.h  ThreadPool.h  Timer.h  Vector2f.h  WeaponAPI.h
src/: Background.cpp  BulletAPI.cpp  BulletPool.cpp  Camera.cpp  Control.cpp  CustomFSM.cpp  Engine.cpp  Entity.cpp  ExplosionPool.cpp  GlobalCombatData.cpp  ShipAPI.cpp  ShipPool.cpp  TacticalMap.cpp  WeaponAPI.cpp  main.cpp
src/effect/: Distortion.cpp  ExplosionAPI.cpp  ImageProcessing.cpp  SequencedExplosion.cpp
src/tool/: Manager.cpp  MathTool.cpp  Polygon.cpp  ThreadPool.cpp  Timer.cpp  Vector2f.cpp
